Update git-integration.mdx (#3902)

--- a/docs/production/data-sync/git-integration.mdx
+++ b/docs/production/data-sync/git-integration.mdx
@@ -42,7 +42,7 @@ you don't have to enter your SSH key passphrase every time you perform an action
 </Step>
 <Step title="Set up your SSH key">
   This will allow your machine to access GitHub. 
-  Check out this sections this [guide](/production/data-sync/git-integration#configure-git-in-mage) to set up your SSH key.
+  Check out this sections this [guide](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent) to set up your SSH key.
 </Step>
 <Step title="Select SSH as the authentication type.">
 </Step>
