--- a/docs/integrations/databases/BigQuery.mdx
+++ b/docs/integrations/databases/BigQuery.mdx
@@ -12,9 +12,7 @@ title: "BigQuery"
 
 <Snippet file="google-auth.mdx"/>
 
----
-
-## Using SQL block
+## Using SQL blocks
 
 1. Create a new pipeline or open an existing pipeline.
 2. Add a data loader, transformer, or data exporter block.
@@ -32,9 +30,7 @@ title: "BigQuery"
 9. Enter in this test query: `SELECT 1`.
 10. Run the block.
 
----
-
-## Using Python block
+## Using Python blocks
 
 1. Create a new pipeline or open an existing pipeline.
 2. Add a data loader, transformer, or data exporter block (the code snippet
