--- a/docs/contributing/overview.mdx
+++ b/docs/contributing/overview.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Contributing"
-sidebarTitle: "Contributing"
+sidebarTitle: "Overview"
 icon: "shovel"
 description: "We welcome all contributions to Mage; from small UI enhancements to brand new
 cleaning actions. We love seeing community members level up and give people
