--- a/docs/contributing/backend/io/adding-a-class.mdx
+++ b/docs/contributing/backend/io/adding-a-class.mdx
@@ -24,7 +24,7 @@ The first step to contributing an IO class is to configure your development envi
 
 Once configured, you'll want to create a new file in the `mage_ai/io` directory. The file should be named after the IO class you're contributing. For example, if you're contributing an IO class called `MyIOClass`, you should create a file called `my_io_class.py`.
 
-Some IO classes are relatively straightforward, like [exporting to local files](https://github.com/mage-ai/mage-ai/blob/master/mage_ai/io/file.py) or writing to Google Sheets (https://github.com/mage-ai/mage-ai/blob/master/mage_ai/io/google_sheets.py). Others, like full database integrations, can be pretty complex. [Google BigQuery](https://github.com/mage-ai/mage-ai/blob/master/mage_ai/io/bigquery.py) is a good example of a complex IO class.
+Some IO classes are relatively straightforward, like [exporting to local files](https://github.com/mage-ai/mage-ai/blob/master/mage_ai/io/file.py) or [writing to Google Sheets](https://github.com/mage-ai/mage-ai/blob/master/mage_ai/io/google_sheets.py). Others, like full database integrations, can be pretty complex. [Google BigQuery](https://github.com/mage-ai/mage-ai/blob/master/mage_ai/io/bigquery.py) is a good example of a complex IO class.
 
 Most classes are platform specific, but for a database, you might need the following methods:
 
@@ -38,6 +38,14 @@ Additionally, every class will need to have the following methods:
 
 - `__init__`: Initialize the class
 - `with_config`: Initialize the database client from the configuration loader. You'll notice that this method is used in _all_ of our templates. 
+
+### Test your IO class
+
+In order to test your class, you should perform all of the methods you defined in the class itself. Once you pass our linting checks (outlined in the development environment link above) _and_ your tests pass, you're ready to submit a pull request! Learn more about pull requests on the contribution.
+
+## Create a pull request
+
+<Snippet file="contribution-process.mdx"/>
 
 
 
