[Doc] Add sensor check frequency in the docs

--- a/docs/design/blocks/sensor.mdx
+++ b/docs/design/blocks/sensor.mdx
@@ -59,6 +59,8 @@ The default value is 24 hours.
 Sensors can also have upstream block dependencies. The output of the upstream blocks will be passed
 into the sensor in the `args` parameter like in other Mage block types.
 
+Currently, the sensor makes a check every 60 seconds.
+
 ## Templates
 
 When adding a sensor block, here are the available templates to choose from:
