--- a/docs/about/releases.mdx
+++ b/docs/about/releases.mdx
@@ -14,7 +14,7 @@ description: "Latest new features and changelog."
 ---
 
 [All releases](https://github.com/mage-ai/mage-ai/releases)
-1. [0.9.41 | Goosebumps Release](https://github.com/mage-ai/mage-ai/releases/tag/0.9.41)
+1. [0.9.41 | Halloween Release](https://github.com/mage-ai/mage-ai/releases/tag/0.9.41)
 1. [0.9.38 | Goosebumps Release](https://github.com/mage-ai/mage-ai/releases/tag/0.9.38)
 1. [0.9.35 | Loki Release](https://github.com/mage-ai/mage-ai/releases/tag/0.9.35)
 1. [0.9.34 | C-3PO Release](https://github.com/mage-ai/mage-ai/releases/tag/0.9.34)
