--- a/docs/development/git/generate-an-ssh-token.mdx
+++ b/docs/development/git/generate-an-ssh-token.mdx
@@ -20,19 +20,15 @@ sidebarTitle: "Git with SSH"
 
       This step allows your Git provider to recognize your SSH key and communicate.
 
-      | Provider | Instructions                                                                                                                |
-      |----------|-----------------------------------------------------------------------------------------------------------------------------|
-      | GitHub   | [GitHub Docs](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/adding-a-new-ssh-key-to-your-github-account) |
-      | GitLab   | [GitLab Docs](https://docs.gitlab.com/ee/user/ssh.html#add-an-ssh-key-to-your-gitlab-account)                                      |
+      - [GitHub Docs](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/adding-a-new-ssh-key-to-your-github-account)
+      - [GitLab Docs](https://docs.gitlab.com/ee/user/ssh.html#add-an-ssh-key-to-your-gitlab-account)                                     
 
 
    </Step>
    <Step title="Test your SSH connection">
-      | Provider | Instructions                                                                                                                |
-      |----------|-----------------------------------------------------------------------------------------------------------------------------|
-      | GitHub   | [GitHub Docs](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/testing-your-ssh-connection) |
-      | GitLab   | [GitLab Docs](https://docs.gitlab.com/ee/user/ssh.html#verify-that-you-can-connect)                                      |
-      
+      - [GitHub Docs](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/testing-your-ssh-connection)
+      - [GitLab Docs](https://docs.gitlab.com/ee/user/ssh.html#verify-that-you-can-connect)      
+
    </Step>
    <Step title="Add SSH to known hosts">
       
