--- a/docs/guides/tips-and-tricks.mdx
+++ b/docs/guides/tips-and-tricks.mdx
@@ -98,4 +98,46 @@ description: "Here are all the great ways you can make the most of Mage."
   </Frame>
 </Accordion>
 
+<Accordion title="Replicate Blocks" icon="block">
+
+  Watch this video to learn how you can use Replica Blocks to add conditional execution and branching logic to your next data pipeline!
+
+  See our full docs [here](/guides/blocks/replicate-blocks) for more info.
+  
+  <Frame>
+  <iframe
+    width="560"
+    height="315"
+    src="https://www.youtube.com/embed/M_bBCSTNDw4"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowFullScreen
+  ></iframe>
+  </Frame>
+</Accordion>
+
+<Accordion title="Use Split Pane View" icon="window">
+  The Mage pipeline editor can be used in a single, notebook-style interface _or_ in a split-pane view, with block output displayed on the right and blocks themselves on the left. 
+
+  Split pane view can be enabled by selecting the "split" icon in the pipeline editor, as shown below:
+
+  <Frame>
+    <img src="https://github.com/mage-ai/assets/blob/main/split-pane-view.png?raw=true"/>
+  </Frame>
+
+  Can't wait to try it out? Check out the video below for a demo!
+  
+  <Frame>
+  <iframe
+    width="560"
+    height="315"
+    src="https://www.youtube.com/embed/x4VLyIG6fCc"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowFullScreen
+  ></iframe>
+  </Frame>
+</Accordion>
 </AccordionGroup>
