--- a/docs/production/data-sync/git-integration.mdx
+++ b/docs/production/data-sync/git-integration.mdx
@@ -53,7 +53,7 @@ you don't have to enter your SSH key passphrase every time you perform an action
     - `Remote repo url`: Your Github repository's remote url. Use the SSH link instead of HTTPS link.
     - `Local directory path`: The directory in your machine that will be synced with the Github repository. If this field is omitted, it will default to the path determined by Python's `os.getcwd()`. You can check what your current working directory is in a Scratchpad block.
 </Step>
-<Step title="[Optional] Fill out the remaining fields.">
+<Step title="Fill out the remaining fields.">
   Filling out these fields will allow Mage to recreate your git and SSH settings if they are deleted (i.e. if your container restarts):
     - `Username`: Your git username. If you push to your remote repo, this username will show up next to your commits.
     - `Email`: Your git email. Used for the same purpose as your username.
@@ -85,7 +85,7 @@ you don't have to enter your SSH key passphrase every time you perform an action
         - `Remote repo url`: Your Github repository's remote url. Use the SSH link instead of HTTPS link.
         - `Local directory path`: The directory in your machine that will be synced with the Github repository. If this field is omitted, it will default to the path determined by Python's `os.getcwd()`. You can check what your current working directory is in a Scratchpad block.
     </Step>
-    <Step title="[Optional] Fill out the remaining fields.">
+    <Step title="Fill out the remaining fields.">
         - `Username`: Your git username. If you push to your remote repo, this username will show up next to your commits.
         - `Email`: Your git email. Used for the same purpose as your username.
         - `Access token`: Enter the Git access token that you created in step 4.
