--- a/docs/contributing/data-integrations/adapt-existing-source.mdx
+++ b/docs/contributing/data-integrations/adapt-existing-source.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Adapt an existing source"
-description: "Mage builds data integrations from Singer taps, so if there's a source you want to use that isn't supported yet, you can adapt it yourself!"
+description: "Mage builds data integrations from [Singer taps](https://www.singer.io/#taps), so if there's a Singer source you want to use that isn't supported yet, you can adapt it yourself!"
 ---
 
 ## Getting started
@@ -122,18 +122,7 @@ Don't forget to use absolute imports for these files. [HubSpot](https://github.c
 
 ### Add test connection method
 
-We need a `test_connection` method to enable testing the tap in the Mage UI. This is a simple method that instantiates the tap and closes it. Just replace `YourSource` with the source class, e.g. `Github` and provide the configuration arguments to the tap. Here's a [good example](https://github.com/mage-ai/mage-ai/blob/master/mage_integrations/mage_integrations/sources/sftp/__init__.py#L28-L35) from the sFTP tap.
-
-```python
-def test_connection(self) -> None:
-        client = SFTPConnection(host=self.config['host'],
-                                username=self.config['username'],
-                                password=self.config['password'],
-                                private_key_file=self.config.get(
-                                    'private_key_file'),
-                                port=self.config['port'])
-        client.close()
-```
+<Snippet file="test-connection.mdx"/>
 
 ### Overwrite `write_schema` method
 
