Add kafka api_version to the data loader and data exporter templates

--- a/docs/streaming/destinations/kafka.mdx
+++ b/docs/streaming/destinations/kafka.mdx
@@ -99,3 +99,5 @@ topic: topic_name
 ```
 
 - The default time timestamp is the current time of execution.
+
+- In case you are using newer versions of Kafka brokers, you should consider using corresponding Kafka api_version.
