--- a/docs/streaming/sources/kafka.mdx
+++ b/docs/streaming/sources/kafka.mdx
@@ -92,3 +92,7 @@ serde_config:
   schema_registry_username: username
   schema_registry_password: password
 ```
+
+## API version
+
+In case you are using newer versions of Kafka brokers, you should consider using corresponding Kafka api_version.
