--- a/docs/data-integrations/overview.mdx
+++ b/docs/data-integrations/overview.mdx
@@ -135,6 +135,7 @@ Read more about destinations:
 - [BigQuery](https://github.com/mage-ai/mage-ai/blob/master/mage_integrations/mage_integrations/destinations/bigquery/README.md)
 - [Clickhouse](https://github.com/mage-ai/mage-ai/tree/master/mage_integrations/mage_integrations/destinations/clickhouse)
 - [Delta Lake (S3)](https://github.com/mage-ai/mage-ai/blob/master/mage_integrations/mage_integrations/destinations/delta_lake_s3/README.md)
+- [Delta Lake (Azure)](https://github.com/mage-ai/mage-ai/blob/master/mage_integrations/mage_integrations/destinations/delta_lake_azure/README.md)
 - [Elasticsearch](https://github.com/mage-ai/mage-ai/blob/master/mage_integrations/mage_integrations/destinations/elasticsearch/README.md)
 - [Google Cloud Storage](https://github.com/mage-ai/mage-ai/tree/master/mage_integrations/mage_integrations/destinations/google_cloud_storage/README.md)
 - [Microsoft SQL Server](https://github.com/mage-ai/mage-ai/blob/master/mage_integrations/mage_integrations/destinations/mssql/README.md)
