--- a/docs/about/frequently-asked-questions.mdx
+++ b/docs/about/frequently-asked-questions.mdx
@@ -130,7 +130,7 @@ Mage can execute your code in a Spark cluster, managed by AWS, GCP, or even Data
 
 We love and welcome community contributions! [Here is a doc](/contributing/overview) to get you started.
 
-To request features, add a “Feature request” using the `New issue` button in Github from this [link](https://github.com/mage-ai/mage-ai/issues), or join our [feature-request](https://www.mage.ai/chat) Slack channel.
+To request features, add a “Feature request” using the `New issue` button in GitHub from this [link](https://github.com/mage-ai/mage-ai/issues), or join our [feature-request](https://www.mage.ai/chat) Slack channel.
 
 </Accordion>
 </AccordionGroup>
