--- a/docs/production/ci-cd/staging-production/github-actions.mdx
+++ b/docs/production/ci-cd/staging-production/github-actions.mdx
@@ -14,7 +14,7 @@ Mage supports GitHub Actions for CI/CD workflows. We have templates for deployin
 4. Create separate staging and production GitHub environments in the **Environments** section.
     1. You can also choose to require approval before running jobs in your production environment.
     More information [here](https://docs.github.com/en/actions/deployment/targeting-different-environments/using-environments-for-deployment#required-reviewers).
-    2. You may need to change the `environment` variable in the jobs section of the Github Actions below
+    2. You may need to change the `environment` variable in the jobs section of the GitHub Actions below
     based on the name of your GitHub environments.
 5. Click the link labeled **Actions**.
 6. Click the button labeled **New repository secret** in the top right corner.
