--- a/docs/production/configuring-production-settings/overview.mdx
+++ b/docs/production/configuring-production-settings/overview.mdx
@@ -9,7 +9,7 @@ sidebarTitle: "Overview"
 
 You can configure Mage to not allow any edits to pipelines or blocks and/or not allow edit or execute
 access for the notebook. Users will only be able to create triggers and view the existing pipelines.
-They will have access to features such as syncing with Github and future remote repository integrations.
+They will have access to features such as syncing with GitHub and future remote repository integrations.
 
 To enable this feature set the following environment variable:
 `export DISABLE_NOTEBOOK_EDIT_ACCESS=<value>`
