--- a/docs/production/data-sync/github.mdx
+++ b/docs/production/data-sync/github.mdx
@@ -6,7 +6,9 @@ description: "Authenticate with GitHub then pull from a remote repository, push 
 ---
 
 <Frame>
-    <img alt="GitHub authentication" src="https://wallpapercave.com/dwp2x/wp3082255.jpg" />
+    <div align="center">
+    <img alt="GitHub authentication" src="https://wallpapercave.com/dwp2x/wp3082255.jpg" width="75%" />
+    </div>
 </Frame>
 
 On the homepage in the left side navigation, click the link labeled <b>Version control</b>.
