Updated destination docs

--- a/docs/data-integrations/overview.mdx
+++ b/docs/data-integrations/overview.mdx
@@ -137,6 +137,7 @@ Read more about destinations:
 - [Delta Lake (S3)](https://github.com/mage-ai/mage-ai/blob/master/mage_integrations/mage_integrations/destinations/delta_lake_s3/README.md)
 - [Elasticsearch](https://github.com/mage-ai/mage-ai/blob/master/mage_integrations/mage_integrations/destinations/elasticsearch/README.md)
 - [Google Cloud Storage](https://github.com/mage-ai/mage-ai/tree/master/mage_integrations/mage_integrations/destinations/google_cloud_storage/README.md)
+- [Kafka](https://github.com/mage-ai/mage-ai/tree/master/mage_integrations/mage_integrations/destinations/kafka/README.md)
 - [Microsoft SQL Server](https://github.com/mage-ai/mage-ai/blob/master/mage_integrations/mage_integrations/destinations/mssql/README.md)
 - [MongoDB](https://github.com/mage-ai/mage-ai/tree/master/mage_integrations/mage_integrations/destinations/mongodb)
 - [MySQL](https://github.com/mage-ai/mage-ai/blob/master/mage_integrations/mage_integrations/destinations/mysql/README.md)
