--- a/docs/getting-started/setting-up-git.mdx
+++ b/docs/getting-started/setting-up-git.mdx
@@ -26,4 +26,4 @@ If you're simply looking for version control, you're in luck! It ships out-of-th
 
 Git Sync is particularly useful in production instances, where other Git methods are can be used more meaningfully in development instances. Since Git sync is a one-way sync, it's not very useful for collaboration, since changes get overridden. However, this makes it great for a production Mage instance, where verified changes should only be accepted from development environments.
 
-A common pattern is to use devevelopment instances to edit and push (Git integration), then have production instances use Git Sync or CI/CD.
+A common pattern is to use development instances to edit and push (Git integration), then have production instances use Git Sync or CI/CD.
