--- a/docs/production/data-sync/git-sync.mdx
+++ b/docs/production/data-sync/git-sync.mdx
@@ -6,7 +6,7 @@ Git sync is a Git feature that allows you to tie your local project to a remote 
 
 Running a Git sync will **_overwrite all local changes_** and replace them with the code in the specified remote branch. Git syncs can be run either from the Git settings page, or before every trigger run if you selected the `Sync before each trigger run` field.
 
-To enable Git Sync, first [configure Git in Mage](/development/git/configure), then navigate to the settings page and tick the `Git Sync` box. To configure git settings, see [this guide](/production/data-sync/git-integration).
+To enable Git Sync, first [configure Git in Mage](/development/git/configure), then navigate to the settings page and tick the `Git Sync` box.
 
 ### Syncing git submodules
 
