--- a/docs/contributing/data-integrations/adapt-existing-source.mdx
+++ b/docs/contributing/data-integrations/adapt-existing-source.mdx
@@ -112,7 +112,7 @@ if __name__ == "__main__":
     main(YourSource, schemas_folder="tap_your_tap/schemas")
 ```
 
-Replace YourSource with the name of your source, e.g. `GitHub` for GitHub, and `tap_your_tap` with the name of your tap, e.g. `tap_github`.
+Replace YourSource with the name of your source, e.g. `Github` for Github, and `tap_your_tap` with the name of your tap, e.g. `tap_github`.
 
 ### Overwrite tap methods
 
