--- a/docs/getting-started/setting-up-git.mdx
+++ b/docs/getting-started/setting-up-git.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Using Git in Mage"
-sidebarTitle: "Using Git in Mage"
+title: "Git in Mage"
+sidebarTitle: "Get started with Git"
 description: "There are a number of ways to enable version control, collaboration, and easy deployment using Git in Mage. We'll cover them all on this page."
 ---
 
@@ -19,18 +19,11 @@ If you're simply looking for version control, you're in luck! It ships out-of-th
 | Recommended | Use                                                 | Recommendation          | Ease of use | Functionality          |
 | ----------- | --------------------------------------------------- | ----------------------- | ----------- | ---------------------- |
 | ✅          | I want to see a history of my file edits            | [Mage version control](/getting-started/file-versions)    | Beginner    | File-level versioning  |
-| ✅          | I want to develop/deploy Mage using Git with GitHub | [GitHub version control](/production/data-sync/github)     | Moderate    | Full w/ OAuth          |
+| ✅          | I want to develop/deploy Mage using GitHub | [GitHub version control](/production/data-sync/github)     | Moderate    | Full w/ OAuth          |
 | ✅          | I want to deploy Mage using Git with any provider   | [Git integration with Git Sync](/production/data-sync/git-sync) | Advanced    | Full w/ SSH/HTTPS Auth |
 | ⚠️          | I want to develop Mage using Git with any provider  | [Git integration _without_ Git Sync](/production/data-sync/git-integration)  | Advanced    | Full w/ SSH/HTTPS Auth |
 
-## Example usage
 
-Git Sync is particularly useful in production instances, where other Git methods are can be used more meaningfully in development instances. 
+Git Sync is particularly useful in production instances, where other Git methods are can be used more meaningfully in development instances. Since Git sync is a one-way sync, it's not very useful for collaboration, since changes get overridden. However, this makes it great for a production Mage instance, where verified changes should only be accepted from development environments.
 
-Since Git sync is a one-way sync, it's not very useful for collaboration, since changes get overridden. However, this makes it great for a production Mage instance, where verified changes should only be accepted from development environments.
-
-A common pattern is to use devevelopment instances to edit and push (Git integration), then have production instances use Git Sync or CI/CD.
-
-## Generating an SSH Token
-
-Depending on your authentication method, you may need to generate an SSH token. See our guide here for [more information](/development/git/generate-an-ssh-token).
+A common pattern is to use development instances to edit and push (Git integration), then have production instances use Git Sync or CI/CD.
