--- a/docs/_snippets/contribution-process.mdx
+++ b/docs/_snippets/contribution-process.mdx
@@ -1,6 +1,6 @@
 <Steps>
     <Step title="Fork the Mage GitHub repo">
-    Visit [GitHub](https://github.com/mage-ai/mage-ai) and fork the Mage repo to your machine.
+    Visit [GitHub](https://github.com/mage-ai/mage-ai) and fork the Mage repo, then clone it to your machine.
     </Step>
     <Step title="Create a branch">
     Create a branch in your forked repo and commit your changes.
@@ -13,6 +13,7 @@
         - `@wangxiaoyou1993` (backend/IO)
         - `@dy46` (backend)
         - `@johnson-mage` (frontend)
+        - `@mattppal` (docs/website)
         - `@tommydangerous`
     </Step>
 </Steps>
